Removed scrollbars. Fixed width of header. Fixed background colors for dark theme.

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -2,6 +2,8 @@ header {
   background-color: var(--second-bg-color);
   color: var(--second-text-color);
   border-bottom: 2px solid var(--highlight-color);
+  padding: 18px;
+  width: 100vw;
 }
 
 .flex-container {
