--- a/src/app/news/news.component.scss
+++ b/src/app/news/news.component.scss
@@ -1,5 +1,4 @@
 .content {
-  background-color: var(--main-bg-color);
   color: var(--main-text-color);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
