--- a/src/themes.scss
+++ b/src/themes.scss
@@ -5,13 +5,13 @@
     /*------------------------------*/
   
     /*Body*/
-    --main-bg-color: #091a28;
+    --main-bg-color: #101018;
     --main-text-color: #cdd7e0;
     --main-link-hover-color: #58a4b0;
     /*------------------------------*/
   
     /*Header & footer*/
-    --second-bg-color: #02040a;
+    --second-bg-color: #080810;
     --second-text-color: #a8b4c4;
     --second-link-hover-color: #e46443;
     /*------------------------------*/
